# aiwork

./: .gitignore  main.py  pyproject.toml
notebooks/: aiworkshop_00_intro.ipynb  aiworkshop_01_vorbereitung-grundlagen.ipynb  aiworkshop_02_llmapi-kontext-historie.ipynb  aiworkshop_03_rag-embedding.ipynb  aiworkshop_04_rag-document-processing.ipynb  aiworkshop_05_rag-vektordbs.ipynb  aiworkshop_06_agents.ipynb  aiworkshop_07_projekt-angabe.ipynb
notebooks/aiworkshop_utils/: config.py  custom_utils.py  docling_imports.py  embedders.py  jupyter_imports.py  openai_imports.py  standardlib_imports.py  thirdparty_imports.py
